--- a/app/src/main/res/layout/activity_uidemo.xml
+++ b/app/src/main/res/layout/activity_uidemo.xml
@@ -19,7 +19,7 @@
 
     <EditText
         android:id="@+id/txtUserName"
-        android:layout_width="250px"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="40dp"
